--- a/templates/maintenance.html
+++ b/templates/maintenance.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Application Offline for Maintenance</title>
+    <title>En maintenance</title>
     <style type="text/css">
       body {
         background-color: white;
@@ -33,9 +33,9 @@
   </head>
   <body>
       <div class="section">
-        <h1>Application Offline for Maintenance</h1>
+        <h1>En cours de maintenance</h1>
         <div class="article">
-          <p>This application is undergoing maintenance right now.  Please check back later.</p>
+          <p>Ce site est présentement en cours de maintenance.</p>
         </div>
       </div>
   </body>
